Tue Jul 30 14:49:48 1996  Thomas Bushnell, n/BSG  <thomas@gnu.ai.mit.edu>

	* login.c (main/verify_passwd): If government is broken, don't use
	crypt.
	* su.c (check_password): Likewise.

	* login.c (main/verify_passwd): Provide correct prototype for
	crypt. 
	* su.c (check_password): Likewise.

Mon Jul 29 03:22:07 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* vmstat.c (val_t): Make `long long'.

Sun Jul 28 21:13:31 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* w.c (main): Correctly parse the -w/--width option.

Fri Jul 26 12:34:00 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* vmstat.c (enum val_display_type): Add `PAGESZ'.
	`SIZES' -> `SIZE'; all uses updated.  Remove BYTES, PAGES, and KBYTES.
	(fields): disp_type of "pagesize" and "swap-pagesize" changed to PAGESZ.
	(val_display_type_is_size): Function removed.
	(struct field): `disp_type' field -> `type'; all used updated.
	(print_val): Add TYPE & SIZE_UNITS arguments; remove HOW & PSIZE.
	(main): Variable user_disp_type removed.  Variable size_units added.
	Add SIZE_UNITS macro, remove FDISPTYPE macro.
	Calls to print_val now use new PVAL macro.
	(get_vmstats_field): Just test against a type of SIZE, instead of
	using val_display_type_is_size.

Thu Jul 25 22:36:38 1996  Miles Bader  <miles@gnu.ai.mit.edu>

	* Makefile (INSTALL-vmstat-ops): New variable.

	* vmstat.c (options, main): -k/--kilobytes, -v/--pages, and
	-b/--bytes options added.
	(fields): New struct members initialized.  `size',
	`cache-hit-ratio', `swap-size', `swap-active', `swap-free', and
	`swap-pagesize' added.
	(val_t, enum val_display_type, enum field_change_type): New types.
	(val_display_type_is_size, print_val, vm_state_refresh,
	vm_state_get_field, get_vmstats_field, get_size,
	ensure_def_pager_info, get_swap_size, get_swap_free,
	get_swap_page_size, get_swap_active): New functions.
	(struct field): CHANGE_TYPE, DISP_TYPE, STANDARD, and COMPUTE
	fields added.  CUM field removed.
	(struct vm_state): New type.